# metropolis-retro.github.io

./: .codespellrc  .editorconfig  .gitignore  .pre-commit-config-audit.yaml  .pre-commit-config.yaml  Dockerfile.dev  Dockerfile.prod  FUNDING.yml  Makefile  README.md  biome.json  docker-compose.dev.yml  docker-compose.prod.yml  eslint.config.mjs  make.bat  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/: FUNDING.yml  dependabot.yml
.github/linters/: .codespellrc  .ls-lint.yml  .markdown-lint.yml  .yaml-lint.yml  codespell.txt
.github/workflows/: basic-tests.yml  docker-build-test.yml  first-interaction.yml  ls-lint.yml  pre-commit-audit.yml  pre-commit-manual.yml  pre-commit.yml  reusable-prek.yml  snapshot-tests.yml  super-linter.yml
app/: globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
app/about/: page.tsx
app/blog/: page.tsx
app/contact/: page.tsx
app/events/: page.tsx
app/faq/: page.tsx
app/gallery/: page.tsx
app/games/: page.tsx
app/membership/: page.tsx
app/privacy-policy/: page.tsx
app/terms-of-service/: page.tsx
app/updates/: page.tsx
components/: theme-provider.tsx
components/forms/: contact-form.tsx  newsletter-subscribe-form.tsx
components/layout/: footer.tsx  header.tsx
components/sections/: about.tsx  awards.tsx  client-logos.tsx  faq.tsx  final-cta.tsx  gallery-grid.tsx  hero.tsx  insights.tsx  membership.tsx  selected-works.tsx  testimonials.tsx  venue-schedule.tsx
components/ui/: gradient-bar.tsx  (+3 more)
hooks/: use-contact-api.ts  use-newsletter-api.ts
lib/: seo.ts
(+120 files in other folders)
