# ----------------------------------------------------------------------------
# Root pyproject.toml used only for documentation & dev dependency management.
# This is NOT a distributable Python package.
# ----------------------------------------------------------------------------
[project]
name = "metropolis-retro-monorepo-meta"
version = "0.0.0"
description = "Internal meta project for Metropolis Retro documentation and development tooling (not published)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"

[dependency-groups]
dev = [
    "prek==0.3.8",
]

[tool.uv]
package = false
